--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="o order weed in Australia Melbourne find quality bud in perth, looking for vapes in adelaide">
+    <meta name="description" content="o order weed in Australia Melbourne find quality bud in perth, looking for vapes in adelaide Sydney 420 telegram plug
+        canberra weed delivery where to buy bud in gold coast">
     <meta name="keywords" content="BUD, 420, Pot">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Broccolito 420 BUD POT GREEN GRASS ONLINE HELP</title>
-    <link rel="icon" sizes="250x2050" href="img/brocco green.jpeg">
+    <title>Broccolito Telegram F2F Weed 420 Plug </title>
+    <link rel="icon" sizes="250x250" href="img/brocco green.jpeg">
     <link rel="stylesheet" href="css/style sheet.css">
 </head>
 <body>
@@ -16,9 +17,9 @@
       <a href=""><img src="img/brocco green.jpeg" height="40" width="60" alt="broccolito"></a>
       <a href=""><span class="broccolito">BROCCOLITO</span></a>
     </div>
-    <h1>Welcome to Broccolito 420 BUD Pot Network</h1>
+    <h1>Broccolito🥦Telegram Weed 420 Plug</h1>
     <p class="p0">Are you having Trouble with your order? Email us to report problem</p>
-    <a href="mailto:"><img class="mail" src="img/red mail.jpeg" height="50" width="110" alt=""></a>
+    <a href="mailto:safedealsstaff@gmail.com"><img class="mail" src="img/red mail.jpeg" height="50" width="110" alt=""></a>
 
   </header>
   
