--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <header>
 
     <div class="header1">
-      <a href=""><img src="img/brocco green.jpeg" height="40" width="60" alt="broccolito"></a>
-      <a href=""><span class="broccolito">BROCCOLITO</span></a>
+<!--       <a href=""><img src="img/brocco green.jpeg" height="40" width="60" alt="broccolito"></a> -->
+      <a href=""><span class="broccolito">BROCCOLITO🥦</span></a>
     </div>
-    <h1>Broccolito🥦Telegram Weed 420 Plug</h1>
+    <h1>Broccolito🥦 Telegram Weed 420 Plugs</h1>
     <p class="p0">Are you having Trouble with your order? Email us to report problem</p>
     <a href="mailto:safedealsstaff@gmail.com"><img class="mail" src="img/red mail.jpeg" height="50" width="110" alt=""></a>
 
